syntax = "proto3";

option csharp_namespace = "Discount.Grpc.Protos";

service CouponProtoService {
	rpc GetCouponByProduct(GetCouponByProductRequest) returns (CouponModel);
	rpc CreateCoupon(CreateCouponRequest) returns (CouponModel);
	rpc UpdateCoupon(UpdateCouponRequest) returns (UpdateCouponRespone);
	rpc DeleteCoupon(DeleteCouponRequest) returns (DeleteCouponRespone);
}

message GetCouponByProductRequest {
	string productId = 1;
}

message CreateCouponRequest {
	CouponModel coupon = 1;
}

message UpdateCouponRequest {
	CouponModel coupon = 1;
}

message DeleteCouponRequest {
	int32 id = 1;
}

message CouponModel {
	int32 id = 1;
	string code = 2;
	string productId = 3;
	string productName = 4;
	int32 discount = 5;
	string description = 6;
}

message UpdateCouponRespone {
	bool success = 1;
}

message DeleteCouponRespone {
	bool success = 1;
}
